Fix collapsed temporal coverage table borders

--- a/registry/src/orca/_styles/add_registry_object.css
+++ b/registry/src/orca/_styles/add_registry_object.css
@@ -663,6 +663,7 @@ label.mandatory:before {
 	margin-top:10px;
 	border:none; 
 	width:100%; 
+	border-collapse:collapse;
 }
 
 
